hiding fixed footer on mobile displays

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -25,9 +25,11 @@ body {
 */
 }
 
-
+h2 { font-family:exotc350_bd_btbold, Arial, sans-serif ;
+        font-weight: 200%;
+}
 h1,
-h2,
+/*h2,*/
 h3,
 h4,
 h5,
@@ -67,7 +69,7 @@ hr {
     letter-spacing: 2px;
     }
 
-@media screen (orientation: portrait){
+@media screen and (max-width: 350px) and (orientation: portrait){
     .navbar-brand-tel{
         margin-top: 0.5em;
 
@@ -256,12 +258,11 @@ footer p {
     height:42px;
     border:none !important;
 }
-@media screen and (min-width: 350px) and (orientation:portrait){
+@media screen and (min-width:350px) and (max-width:350px) and (orientation:portrait){
     .fixed-footer{
         display: none;
     }
 }
-@media screen and (max-width: 1200px){
 .fixed-footer{
        position:fixed;
        left:0px;
@@ -271,14 +272,14 @@ footer p {
        background: #F4E5D9;
        background: rgba(244,229,217,0.7);
    
-}}
+}
 
 .TA_restaurantWidgetWhite {
     margin-right: 10px;
-    float:right;
+    float: right;
 }
 .FB_logo {
    
     margin: 10px 14px 0px 14px;
-    float:left;
+    float: left;
 }
